// Original file: /Users/aero/work/workspace/Ficus/protos/pipelines_and_context.proto


export interface GrpcColoredRectangle_DONTUSE {
  'colorIndex'?: (number);
  'startX'?: (number | string);
  'length'?: (number | string);
}

export interface GrpcColoredRectangle {
  'colorIndex': (number);
  'startX': (number);
  'length': (number);
}
