// Original file: /Users/aero/work/workspace/Ficus/protos/pipelines_and_context.proto

import type { GrpcContextValue_DONTUSE as _ficus_GrpcContextValue_DONTUSE, GrpcContextValue as _ficus_GrpcContextValue } from '../ficus/GrpcContextValue';

export interface GrpcContextValueWithKeyName_DONTUSE {
  'keyName'?: (string);
  'value'?: (_ficus_GrpcContextValue_DONTUSE | null);
}

export interface GrpcContextValueWithKeyName {
  'keyName': (string);
  'value': (_ficus_GrpcContextValue | null);
}
