// Original file: ../../../../../protos/pipelines_and_context.proto


export interface GrpcEventLogInfo_DONTUSE {
  'eventsCount'?: (number);
  'tracesCount'?: (number);
  'eventClassesCount'?: (number);
}

export interface GrpcEventLogInfo {
  'eventsCount': (number);
  'tracesCount': (number);
  'eventClassesCount': (number);
}
