// Original file: ../../../../../protos/pipelines_and_context.proto

import type { GrpcTraceSubArrays_DONTUSE as _ficus_GrpcTraceSubArrays_DONTUSE, GrpcTraceSubArrays as _ficus_GrpcTraceSubArrays } from '../ficus/GrpcTraceSubArrays';

export interface GrpcEventLogTraceSubArraysContextValue_DONTUSE {
  'tracesSubArrays'?: (_ficus_GrpcTraceSubArrays_DONTUSE)[];
}

export interface GrpcEventLogTraceSubArraysContextValue {
  'tracesSubArrays': (_ficus_GrpcTraceSubArrays)[];
}
