// Original file: ../../../../../protos/pipelines_and_context.proto

import type { GrpcPipelinePartBase_DONTUSE as _ficus_GrpcPipelinePartBase_DONTUSE, GrpcPipelinePartBase as _ficus_GrpcPipelinePartBase } from '../ficus/GrpcPipelinePartBase';

export interface GrpcParallelPipelinePart_DONTUSE {
  'pipelineParts'?: (_ficus_GrpcPipelinePartBase_DONTUSE)[];
}

export interface GrpcParallelPipelinePart {
  'pipelineParts': (_ficus_GrpcPipelinePartBase)[];
}
