// Original file: ../../../../../protos/pipelines_and_context.proto

import type { GrpcContextKeyValue_DONTUSE as _ficus_GrpcContextKeyValue_DONTUSE, GrpcContextKeyValue as _ficus_GrpcContextKeyValue } from '../ficus/GrpcContextKeyValue';

export interface GrpcPipelinePartConfiguration_DONTUSE {
  'configurationParameters'?: (_ficus_GrpcContextKeyValue_DONTUSE)[];
}

export interface GrpcPipelinePartConfiguration {
  'configurationParameters': (_ficus_GrpcContextKeyValue)[];
}
