// Original file: ../../../../../protos/pipelines_and_context.proto

import type { GrpcSubArrayWithTraceIndex_DONTUSE as _ficus_GrpcSubArrayWithTraceIndex_DONTUSE, GrpcSubArrayWithTraceIndex as _ficus_GrpcSubArrayWithTraceIndex } from '../ficus/GrpcSubArrayWithTraceIndex';

export interface GrpcSubArraysWithTraceIndexContextValue_DONTUSE {
  'subArrays'?: (_ficus_GrpcSubArrayWithTraceIndex_DONTUSE)[];
}

export interface GrpcSubArraysWithTraceIndexContextValue {
  'subArrays': (_ficus_GrpcSubArrayWithTraceIndex)[];
}
