// Original file: /Users/aero/work/workspace/Ficus/protos/pipelines_and_context.proto

import type { GrpcTraceSubArray_DONTUSE as _ficus_GrpcTraceSubArray_DONTUSE, GrpcTraceSubArray as _ficus_GrpcTraceSubArray } from '../ficus/GrpcTraceSubArray';

export interface GrpcTraceSubArrays_DONTUSE {
  'subArrays'?: (_ficus_GrpcTraceSubArray_DONTUSE)[];
}

export interface GrpcTraceSubArrays {
  'subArrays': (_ficus_GrpcTraceSubArray)[];
}
